# tc_3rdparty

./: .gitmodules  CMakeLists.txt
eventbus/: CMakeLists.txt
eventbus/src/dexode/: EventBus.hpp
expt/: expected.h  expected.hpp
ffmpeg/include/libavutil/: ffversion.h
ffmpeg7.1.1/include/libavutil/: ffversion.h
miniz/: CMakeLists.txt
openssl/x64/exp/: capi.exp  dasync.exp  ec_internal_test.exp  libcrypto.exp  libssl.exp  openssl.exp  ossltest.exp  padlock.exp  uitest.exp
snowflake/: snowflake.h
sqlite35/: CMakeLists.txt
vlc/3021/include/vlc/: libvlc_media.h
webrtc/include/api/audio_codecs/: audio_format.h
webrtc/include/api/video_codecs/: sdp_video_format.h
